# aranea_ISMS

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  The_golden_rules.md  package.json
code/orangePi/is22/: Cargo.toml  README.md
code/orangePi/is22/config/presets/: camera_presets_v1.0.0.json
code/orangePi/is22/docs/: BUGFIX_REGRESSION_ISSUES.md  CAMERA_DETAIL_MODAL_SPEC.md  CAMERA_MANAGEMENT_DESIGN.md  HANDOFF_PHASE1_PARTIAL.md  INVESTIGATION_REPORT_20260104.md  PARACLATE_INTEGRATION_TEST_REPORT_20260112.md  RTSP_TEMPLATE_DESIGN.md  SCAN_LOGIC_ARP_DEPENDENCY_ISSUE.md  SuggestPane_complete_test_plan.md  SuggestPane_go2rtc_final_spec.md  TIMEOUT_SETTINGS_DESIGN.md  TIMEOUT_SETTINGS_DETAILED_DESIGN.md  TIMEOUT_SETTINGS_INDEX.md  TIMEOUT_SETTINGS_TASKS.md  UI_DESIGN_SPECIFICATION.md  is21_go2rtc_integration_tasks.md  is22_preset_slider_and_camera_events_design.md  mobes_AIcam_control_tower_spec.md
code/orangePi/is22/frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
code/orangePi/is22/frontend/docs/: CONCEPTUAL_GAP_ANALYSIS.md  IMPLEMENTATION_CORRECTION_PLAN.md  UI_REVIEW_CORRECTIONS.md
code/orangePi/is22/frontend/src/: App.tsx  (+1 more)
code/orangePi/is22/migrations/: 001_initial_schema.sql  002_camera_registration_flow.sql  003_detection_reason.sql  004_subnet_credentials.sql  005_camera_credentials.sql  006_subnet_tid.sql  007_camera_extended_fields.sql  008_detection_logs.sql  009_camera_preset_columns.sql  010_camera_fit_mode.sql  011_onvif_extended_data.sql  012_polling_cycles.sql  013_fix_suspicious_score_type.sql  014_camera_threshold_overrides.sql  015_oui_rtsp_ssot.sql  015_oui_rtsp_ssot_rollback.sql  016_oui_rtsp_backfill.sql  017_oui_expansion.sql  018_sdm_integration.sql  019_phase4_feedback_threshold.sql  020_aranea_registration.sql  021_camera_registry.sql  022_summary_service.sql  023_paraclate_client.sql  025_aranea_registration_fid.sql  025_chat_messages.sql  026_camera_sync_extension.sql  027_vehicle_details.sql  028_inference_config.sql  029_lost_cam_tracker.sql  031_access_absorber.sql  032_ptz_disabled.sql
code/orangePi/is22/src/: camera_malfunction_reporter.rs  camera_status_tracker.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
code/orangePi/is22/tests/: .env.example  README.md  run_all_tests.sh  test_camera_registration.sh  test_camera_registration_full.sh
(+1032 files in other folders)
