[package]
name = "e2e-paraclate-test"
version = "0.1.0"
edition = "2021"
description = "E2E Test Tool for IS22-mobes2.0 Paraclate Integration"

[[bin]]
name = "paraclate-test"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
anyhow = "1"
